--- a/style-gallery.css
+++ b/style-gallery.css
@@ -5,6 +5,7 @@ html, body {
   font-family: 'Montserrat', Arial, sans-serif;
   box-sizing: border-box;
   background: rgb(23, 25, 27);
+  overflow-x: hidden;
 }
 
 .hero-bg {
@@ -31,7 +32,6 @@ html, body {
 
 header {
   width: 100vw;
-  position: absolute;
   top: 0;
   left: 0;
   z-index: 2;
@@ -218,7 +218,6 @@ nav ul li.logo-space {
   break-inside: avoid;
   margin-bottom: 40px; /* More space between rows */
   border-radius: 18px;
-  box-shadow: 0 4px 24px rgba(0,0,0,0.13);
   position: relative;
   overflow: hidden;
   transition: box-shadow 0.3s;
@@ -258,8 +257,8 @@ nav ul li.logo-space {
 
 .gallery-title {
     text-align: center;
-    margin: 260px 0 56px 0; /* Increased top margin to move it further down */
-    font-family: 'Playwrite DK Loopet', 'Montserrat', Arial, sans-serif;
+    margin: 60px 0 90px 0; /* Increased top margin to move it further down */
+    font-family: 'Rammetto One', 'Montserrat', Arial, sans-serif;
     font-size: 3rem;
     color: rgba(254, 241, 233, 1);
     letter-spacing: 2px;
